prevent layoutshifts

--- a/src/webpage/themes.css
+++ b/src/webpage/themes.css
@@ -36,6 +36,28 @@
 	--dock-bg: #1b1e20;
 	--card-bg: #000000;
 }
+/*TODO This is a copy of the dark theme, might want to look into other solutions*/
+.no-theme {
+	color-scheme: dark;
+	--primary-button-bg: color-mix(in srgb, #777777 10%, var(--accent-color));
+	--primary-bg: #303339;
+	--primary-hover: #272b31;
+	--primary-text: #dfdfdf;
+	--primary-text-soft: #adb8b9;
+	--secondary-bg: #16191b;
+	--secondary-hover: #252b2c;
+	--servers-bg: #191c1d;
+	--channels-bg: #2a2d33;
+	--channel-selected: #3c4046;
+	--typebox-bg: #3a3e45;
+	--button-bg: #4e5457;
+	--button-hover: #6b7174;
+	--spoiler-bg: #000000;
+	--link: #5ca9ed;
+	--primary-text-prominent: #efefef;
+	--dock-bg: #1b1e20;
+	--card-bg: #000000;
+}
 
 .WHITE-theme {
 	color-scheme: light;
